fixed book images on mobile phones #1

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,5 +99,5 @@ main>.tagline {
 }
 
 .books table img {
-    height: 200px;
+    max-height: 200px;
 }
